# airflow-ml-pipeline

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/: churn_pipeline.py  drift_monitor.py
data/: run_log.json
src/: pipeline.py
tests/: test_pipeline.py
