[project]
name = "airflow-ml-pipeline"
version = "0.1.0"
description = "Airflow-orchestrated ML training pipeline with drift-triggered retraining"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "PL"]
# PLR0913: pipeline functions legitimately take many parameters
# PLR2004: thresholds in data generators and tests are self-explanatory
# PLW0603: module-level handles are the standard pattern here
# N806: X / X_train naming is the ML convention
ignore = ["PLR0913", "PLR2004", "PLW0603", "N806"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["tests/"]
